# pico-community-toolkit

./: .gitignore  CHANGELOG.md  ISSUES_TO_CREATE.md  LICENSE  MARKETING_STRATEGY.md  README.md  create_issues.md  create_issues_api.py  create_issues_automated.sh  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUES/: issue-1-status-badges.md  issue-2-error-messages.md  issue-3-test-cases.md  issue-4-video-tutorials.md  issue-5-config-files.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
backend-comparison/: Cargo.toml  README.md
backend-comparison/src/: lib.rs  main.rs
cli-extensions/: Cargo.toml  README.md
cli-extensions/src/: lib.rs  main.rs
coprocessor-registry/: Cargo.toml  README.md
debugger/: Cargo.toml  README.md
debugger/src/: lib.rs  main.rs
docs/: api-reference.md  architecture.md  contributing.md  development.md
evm-helper/: Cargo.toml  README.md
evm-helper/src/: lib.rs  main.rs
learning-academy/: README.md
monitoring-dashboard/: Cargo.toml  README.md
monitoring-dashboard/src/: lib.rs  main.rs
proof-marketplace/: Cargo.toml  README.md
proof-marketplace/src/: lib.rs  main.rs
testing-framework/: Cargo.toml  README.md
testing-framework/src/: lib.rs  main.rs
