[package]
name = "pico-backend-comparison"
version = "0.1.0"
edition = "2021"
authors = ["Pico Community"]
description = "Compare Pico zkVM proving backends performance"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/pico-community-toolkit"

[[bin]]
name = "pico-compare"
path = "src/main.rs"

[dependencies]
# Pico SDK
pico-sdk = { git = "https://github.com/brevis-network/pico" }

# CLI
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async and utilities
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Logging
env_logger = "0.10"
log = "0.4"

# Time measurement
chrono = { version = "0.4", features = ["serde"] }

# Data visualization
crossterm = "0.27"
ratatui = "0.24"

# File operations
walkdir = "2.3"

[dev-dependencies]
tempfile = "3.0"