[package]
name = "pico-debugger"
version = "0.1.0"
edition = "2021"
description = "Debugger and profiler for Pico zkVM programs"
authors = ["Pico Community"]
license = "MIT"

[[bin]]
name = "pico-debug"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
env_logger = "0.11"
ratatui = "0.24"
crossterm = "0.27"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
pico-sdk = { git = "https://github.com/brevis-network/pico", package = "pico-sdk" }
pico-vm = { git = "https://github.com/brevis-network/pico", package = "pico-vm" }