[package]
name = "pico-monitoring-dashboard"
version = "0.1.0"
edition = "2021"
description = "Monitoring dashboard for Pico zkVM deployments"
authors = ["Pico Community"]
license = "MIT"

[[bin]]
name = "pico-monitor"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
env_logger = "0.11"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
chrono = { version = "0.4", features = ["serde"] }
pico-sdk = { git = "https://github.com/brevis-network/pico", package = "pico-sdk" }
pico-vm = { git = "https://github.com/brevis-network/pico", package = "pico-vm" }