[package]
name = "pico-testing-framework"
version = "0.1.0"
edition = "2021"
description = "Comprehensive testing framework for Pico zkVM programs"
authors = ["Pico Community"]
license = "MIT"

[[bin]]
name = "pico-test"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
env_logger = "0.11"
tokio = { version = "1.0", features = ["full"] }
pico-sdk = { git = "https://github.com/brevis-network/pico", package = "pico-sdk" }
pico-vm = { git = "https://github.com/brevis-network/pico", package = "pico-vm" }